--- a/index.html
+++ b/index.html
@@ -43,9 +43,11 @@
     <meta property="og:description" content="Discover premium luxury smartwatches at PrinceVibe. Shop the finest collection of luxury timepieces with Cash on Delivery across Pakistan. Free shipping, 2-year warranty, and 24/7 customer support." />
     <meta property="og:url" content="https://princevibe.store/" />
     <meta property="og:image" content="https://princevibe.store/logo.png" />
+    <meta property="og:image:secure_url" content="https://princevibe.store/logo.png" />
+    <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
-    <meta property="og:image:alt" content="PrinceVibe - Premium Luxury Smartwatches" />
+    <meta property="og:image:alt" content="PrinceVibe - Premium Luxury Smartwatches Store in Pakistan" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:locale:alternate" content="en_PK" />
     
