Add Facebook app ID to eliminate Facebook Debugger warning

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <meta property="og:image:alt" content="PrinceVibe - Premium Luxury Smartwatches Store in Pakistan" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:locale:alternate" content="en_PK" />
+    <meta property="fb:app_id" content="1675994553051015" />
     
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
