Update: Meta Pixel debug logs, ready for production build

--- a/index.html
+++ b/index.html
@@ -217,6 +217,7 @@
     'https://connect.facebook.net/en_US/fbevents.js');
     fbq('init', '1675994553051015');
     fbq('track', 'PageView');
+    console.log('[MetaPixel] Script loaded and PageView fired from index.html');
     </script>
     <!-- End Meta Pixel Code -->
   </head>
